Description
Trying to compile React OS under itself at r71890, the compilation step works, as I have reported in CORE-11513. However, running "ninja -v" fails with a problem related with windres, as you can see in my screenshot.
The command line arguments to windres seem very long, are we sure that React OS currently supports that?
Attachments
Issue Links
- blocks
-
CORE-13683 Make it possible to build ReactOS on itself, building rosonros
-
- Resolved
-