[MSVCRT][CRT]: Improvements/fixes over popen(), from Wine code and ported by Andreas Maier: the popen_handles array, which is used in _pclose, was never filled. _popen correctly fills it now. Should fix returned codes by popen() and pclose(), which are functions that are called by windres, and this latter expects them to succeed. This was not the case before, in ROS, and therefore trying to e.g. compile ROS within ROS failed from time to time with windres throwing the error that "preprocessing failed". CORE-11568 #resolve

svn path=/trunk/; revision=75365